@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.tulip" name="Tulip Library" version="2.8.19" provider-name="Twilight0">
+<addon id="script.module.tulip" name="Tulip Library" version="2.9.0" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.addon" version="16.1.000"/>
         <import addon="script.module.kodi-six" version="0.0.2"/>
@@ -11,7 +11,12 @@
         <platform>all</platform>
         <license>GPL-3.0-only</license>
         <source>https://github.com/Twilight0/script.module.tulip</source>
-        <news>[B]2.8.X[/B]
+        <news>[B]2.9.X[/B]
+- Net module taken from ResolveURL and adapted
+- Deprecate request function
+- Remove caching from library itself
+
+[B]2.8.X[/B]
 - Replaced xbmc.python import with xbmc.addon for Matrix compatibility
 - New utils module
 - Updated user agent strings
